FIX:マルチプレイ画面のUIを改善

--- a/app/views/self_studies/play.html.erb
+++ b/app/views/self_studies/play.html.erb
@@ -29,7 +29,7 @@
 
   <div class="word-input-container" data-self-study-target="inputContainer"></div>
 
-  <div class="feedback-area" style="height: 50px; display: flex; align-items: center; justify-content: center;">
+  <div class="feedback-area">
     <p class="feedback-text" data-self-study-target="feedback"></p>
   </div>
 
