--- a/app/views/game_plays/show.html.erb
+++ b/app/views/game_plays/show.html.erb
@@ -1,9 +1,5 @@
 <% content_for :title, "ゲームに参加する | Vocano!" %>
 
-<% content_for :head do %>
-  <meta name="turbo-cache-control" content="no-cache">
-<% end %>
-
 <div class="play-container"
   data-turbo="false"
   data-controller="game timer score"
@@ -13,40 +9,39 @@
   data-timer-started-at-value="<%= @game_room.started_at.iso8601 if @game_room.started_at %>"
   data-timer-is-host-value="<%= @is_host ? 'true' : 'false' %>"
   data-timer-participant-id-value="<%= @participant&.id %>"
-  data-game-questions-value="<%= @questions.to_json %>"
-  data-is-host="<%= @is_host.to_s %>"
-  data-participant-id="<%= @participant&.id %>">
+  data-game-questions-value="<%= @questions.to_json %>">
 
-  <div class="game-main-card">
-    <div class="question-frame">
-      <div class="question-header">QUESTION</div>
-      <div class="question-content">
-        <p class="question-text" data-game-target="question">
-          <%= @current_question[:correct_answer] %>
-        </p>
+  <div class="game-header">
+      <div class="header-content-inner">
+        <div class="score-badge">
+          <span>SCORE:</span>
+          <span data-score-target="value" class="score-number">0</span>
+        </div>
+        <div class="timer-section-small">
+          <span class="timer-icon">🕒</span>
+          <span class="timer-display-mini" data-timer-target="display">--:--</span>
+        </div>
       </div>
     </div>
 
-    <div data-game-target="wordInputContainer"></div>
+    <div class="question-frame">
+      <p class="question-label">QUESTION</p>
+      <div class="question-text" data-game-target="question">
+        <%= @current_question[:correct_answer] %>
+      </div>
+    </div>
+
+    <div class="word-input-container" data-game-target="wordInputContainer"></div>
+
+    <div class="feedback-area">
+      <p class="feedback-text" data-game-target="feedback"></p>
+    </div>
 
     <div class="game-footer">
-      <div class="timer-section-small">
-        <span class="timer-display-mini" data-timer-target="display">--:--</span>
-      </div>
-      
       <div class="submit-section">
         <button type="button" class="btn-update" data-action="click->game#submitAnswer">
           OK!
         </button>
       </div>
     </div>
-
-    <div class="feedback-area">
-      <p class="feedback-text" data-game-target="feedback"></p>
-    </div>
   </div>
-
-  <div class="score-badge">
-    SCORE: <span data-score-target="value" class="score-number">0</span>
-  </div>
-</div>
