ADD&FIX:累計学習時間・ポイントの表示を追加、カレンダーのSCSSを修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,4 +26,6 @@
       <span>コミュニティ</span>
     <% end %>
   </div>
+
+  <%= render 'users/score_calendar', score_by_day: @score_by_day if logged_in? %>
 </div>
