FIX:累計獲得ポイント表示コードを修正

--- a/app/views/users/_score_calendar.html.erb
+++ b/app/views/users/_score_calendar.html.erb
@@ -5,8 +5,8 @@
   </div>
 
   <div class="total-study-card">
-    <div class="label">Ⓟ 累計学習ポイント</div>
-    <div class="value">256P</div>
+    <div class="label">Ⓟ 累計獲得ポイント</div>
+    <div class="value"><%= current_user.total_score %>pt</div>
   </div>
 </div>
 
