FIX:累計学習ポイント・時間のUIを変更

--- a/app/views/users/_score_calendar.html.erb
+++ b/app/views/users/_score_calendar.html.erb
@@ -7,7 +7,7 @@
       </div>
     </div>
 
-  <div class="total-study-card">
+  <div class="total-point-card">
     <div class="label">Ⓟ 累計獲得ポイント</div>
     <div class="value"><%= current_user.total_score %>pt</div>
   </div>
