--- a/app/assets/stylesheets/score_calendar.scss
+++ b/app/assets/stylesheets/score_calendar.scss
@@ -133,33 +133,16 @@
   box-shadow: 0 3px 0 rgba(0, 0, 0, 0.15);
 }
 
-.total-study-card {
-  max-width: 900px;
-  padding: 25px 40px;
-  margin-top: 100px;
-  margin-bottom: 12px;
-  background: linear-gradient(135deg, #69C9FF, #9285F3);
-  border-radius: 30px;
-
-  color: white;
-  text-align: center;
-  font-family: 'Zen Maru Gothic', sans-serif;
-
-  box-shadow: 
-    0 10px 25px rgba(0, 0, 0, 0.15),
-    inset 0 -6px 0 rgba(0, 0, 0, 0.2);
-}
-
 .total-stats-section {
   display: flex;
   justify-content: center;
   gap: 50px;
+  margin-top: 100px;
 
 }
 
 .total-study-card {
-  max-width: 700px;
-  width: 100%;
+  flex: 0 0 300px;
   padding: 25px 40px;
   background: linear-gradient(135deg, #69C9FF, #9285F3);
   border-radius: 30px;
@@ -170,6 +153,20 @@
     0 10px 25px rgba(0, 0, 0, 0.15),
     inset 0 -6px 0 rgba(0, 0, 0, 0.2);
 }
+
+.total-point-card {
+  flex: 0 0 300px;
+  padding: 25px 40px;
+  background: linear-gradient(to right, #FFC194, #D685B3);
+  border-radius: 30px;
+  color: white;
+  text-align: center;
+  font-family: 'Zen Maru Gothic', sans-serif;
+  box-shadow: 
+    0 10px 25px rgba(0, 0, 0, 0.15),
+    inset 0 -6px 0 rgba(0, 0, 0, 0.2);
+}
+
 
 .total-study-card .label {
   font-size: 1.2rem;
@@ -178,6 +175,18 @@
 }
 
 .total-study-card .value {
+  font-size: 2rem;
+  font-weight: 900;
+  white-space: nowrap;
+}
+
+.total-point-card .label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+
+.total-point-card .value {
   font-size: 2rem;
   font-weight: 900;
   white-space: nowrap;
