ADD:使い方説明用画像の追加

--- a/app/views/onboarding/index.html.erb
+++ b/app/views/onboarding/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Onboarding#index</h1>
-<p>Find me in app/views/onboarding/index.html.erb</p>
+<div class="onboarding-container">
+
+  <div class="slide active">
+    <h2>Vocano!へようこそ！</h2>
+    <p>このアプリの使い方を紹介します。</p>
+    <button class="next-btn">次へ</button>
+  </div>
+
+  <%= image_tag "create_game_kit.png" %>
+  <div class="slide">
+    <h2>ゲームキットを作ろう</h2>
+    <p>自分だけのオリジナル単語帳を作ろう！</p>
+    <button class="next-btn">次へ</button>
+  </div>
+
+  <%= image_tag "self_study.png" %>
+  <div class="slide">
+    <h2>自習モード</h2>
+    <p>1人でじっくり練習しよう！</p>
+    <button class="next-btn">次へ</button>
+  </div>
+
+  <%= image_tag "game_code.png" %>
+  <%= image_tag "join_game.png" %>
+  <div class="slide">
+    <h2>マルチモード</h2>
+    <p>みんなで対戦！ランキング発表で盛りあがろう！</p>
+    <button class="next-btn">次へ</button>
+  </div>
+
+  <%= image_tag "learning_log.png" %>
+  <div class="slide">
+    <h2>カレンダー</h2>
+    <p>自分の学習記録をを確認しよう！</p>
+    <button class="next-btn">次へ</button>
+  </div>
+
+  <div class="slide">
+    <h2>準備OK！</h2>
+    <p>さあ始めよう！</p>
+    <button id="start-btn">スタート</button>
+  </div>
+
+</div>
