--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+      <div id="help-btn">?</div>
       <% if logged_in? %>
         <%= render 'shared/header' %>
       <% else %>
