--- a/app/views/onboarding/index.html.erb
+++ b/app/views/onboarding/index.html.erb
@@ -1,4 +1,3 @@
-<%= javascript_include_tag "onboarding", "data-turbo-track": "reload", defer: true %>
 <div class="onboarding-container">
 
   <div class="slide active">
@@ -44,3 +43,5 @@
   </div>
 
 </div>
+
+<%= javascript_include_tag "onboarding", type: "module" %>
