--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -2,28 +2,24 @@
 
 <div class="community-grid">
   <% @public_word_kits.each do |kit| %>
-    <div class="community-card">
-      
-      <div class="kit-header">
-        <h2 class="kit-title"><%= kit.name %></h2>
-        <span class="kit-author">by <%= kit.user.name %></span>
-      </div>
 
-      <div class="word-preview">
-        <% kit.word_cards.limit(6).each do |card| %>
-            <div class="word-item">
-            <span class="en"><%= card.english_word %></span>
-            <span class="jp"><%= card.japanese_translation %></span>
-            </div>
-        <% end %>
-      </div>
-
-      <% if kit.word_cards.count > 6 %>
-        <div class="view-more">
-          <%= link_to "すべて見る", word_kit_path(kit) %>
+    <%= link_to community_kit_path(kit), class: "community-card-link" do %>
+      <div class="community-card">
+        
+        <div class="kit-header">
+          <h2 class="kit-title"><%= kit.name %></h2>
+          <span class="kit-author">by <%= kit.user.name %></span>
         </div>
-      <% end %>
 
-    </div>
+        <div class="word-preview">
+          <% kit.word_cards.limit(6).each do |card| %>
+            <div class="word-item">
+              <span class="en"><%= card.english_word %></span>
+              <span class="jp"><%= card.japanese_translation %></span>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
