ADD:お気に入りキット一覧画面の実装

--- a/app/assets/stylesheets/community.scss
+++ b/app/assets/stylesheets/community.scss
@@ -190,3 +190,10 @@
   height: 100%;
   display: block;
 }
+
+.empty-message {
+  text-align: center;
+  margin-top: 60px;
+  font-size: 18px;
+  color: #888;
+}
