--- a/app/assets/stylesheets/top_page.scss
+++ b/app/assets/stylesheets/top_page.scss
@@ -31,6 +31,26 @@ header {
   font-family: 'Zen Maru Gothic', sans-serif;
 }
 
+.menu_group {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.header-heart-link {
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-heart-link svg {
+  width: 100%;
+  height: 100%;
+  fill: #333
+}
+
 .site-logo {
   display: flex;
   align-items: center;
@@ -157,4 +177,11 @@ header {
   background: white !important;
   color: #7B5CD6 !important;
   border: 3px solid #BEEFFF; 
+}
+
+.menu_group .header-heart-link {
+  background: none;
+  padding: 0;
+  border-radius: 0;
+  box-shadow: none;
 }
