--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,15 @@
-<header>
+<header class="header">
   <%= link_to root_path, class: "site-logo" do %>
     <%= image_tag "vocano_site_logo.png", alt: "Vocano!" %>
   <% end %>
 
-  <div class='menu_group'>
+  <div class="menu_group">
+    <% if current_user %>
+      <%= link_to favorites_path, class: "header-heart-link" do %>
+        <%= raw(File.read(Rails.root.join("app/assets/images/heart-solid.svg"))) %>
+      <% end %>
+    <% end %>
+
     <%= render 'shared/hamburger_menu' %>
   </div>
 </header>
