--- a/app/views/shared/_hamburger_menu.html.erb
+++ b/app/views/shared/_hamburger_menu.html.erb
@@ -19,6 +19,7 @@
       <li><%= link_to "ゲームキットを作る", new_word_kit_path, class: "menu-link" %></li>
       <li><%= link_to "ゲームに参加する", new_participant_path, class: "menu-link" %></li>
       <li><%= link_to "お気に入りキット", favorites_path %></li>
+      <li><%= link_to "ユーザー設定", edit_user_path, class: "menu-link" %></li>
       <li><%= link_to 'トップページ', root_path, class: "menu-link" %></li>
       <li><%= link_to 'ログアウト', logout_path, data: { turbo_method: :delete }, class: "menu-link" %></li>
     </ul>
